language/move-model/tests/sources/module_level_spec_err_unassociated.move
module 0x42::TestModule {
}

spec 0x42::TestModuleUndefined {
}
